fix: set border collapse for review blocks

--- a/source/sass/blocks/good-reviews.scss
+++ b/source/sass/blocks/good-reviews.scss
@@ -30,3 +30,7 @@
 .good-reviews__item {
   margin: 0;
 }
+
+.good-reviews__item + .good-reviews__item {
+  margin-top: -1px;
+}
